# aws-tagger

./: .gitignore  .pre-commit-config.yaml  README.md  architecture-diagram.md  pyproject.toml  serverless.yml  supportfor.md  ts.py
src/: __init__.py  clients.py  data.py  main.py  services.py  tagger.py  tagging_strategy.py  trail.py  utils.py
test/: test_sls_lint.py
test/stack/: ec2.tf  ecs.tf  eks.tf  lb.tf  main.tf  r53.tf  rds.tf  s3.tf  sqs.tf  vpc.tf
